--- a/index.html
+++ b/index.html
@@ -2,20 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://layout.dev/assets/templates/layout.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://pouch.jumpshare.com/preview/VWlRsZTsklG0FWOYiFsRieX-Jyy4S5a7cDxa1oDWdawwWVF6Dky1j4IcCKQ1F0SSOrspZRr19J88EI9m2ZBcEe45jtx35oHCyWUxkhXNPA8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Created by Layout</title>
-    <meta name="description" content="Designed for builders, created by Layout." />
-    <meta name="author" content="Layout" />
+    <title>4K Monitor</title>
+    <meta name="description" content="Designed by alan." />
+    <meta name="author" content="Alan Hoffer" />
 
-    <meta property="og:title" content="Created by Layout" />
-    <meta property="og:description" content="Designed for builders, created by Layout." />
+    <meta property="og:title" content="4K Monitor" />
+    <meta property="og:description" content="Designed by alan." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://layout.dev/assets/images/og-image.jpg" />
+    <meta property="og:image" content="./images/logo/logo.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@layout_dev" />
-    <meta name="twitter:image" content="https://layout.dev/assets/images/og-image.jpg" />
 
   </head>
   <body>
